fix: align icon in sidebar

--- a/framework/src/scss/components/_sidebar.scss
+++ b/framework/src/scss/components/_sidebar.scss
@@ -45,6 +45,7 @@
 
 .sidebar nav ul li a  {
 	margin-left: 16px;
+	display: inline-block;
 }
  
 
